feat: comprehensively proxy

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,5 +42,10 @@
 		"skipLibCheck": true
 	},
 	"exclude": ["test"],
-	"include": ["worker-configuration.d.ts", "src/**/*.ts"]
+	"include": [
+		"worker-configuration.d.ts",
+		"src/**/*.ts",
+		"src/**/*.d.ts",
+		"html.d.ts",
+	]
 }
